<resources>
    <string name="app_name">RacingGame2D</string>
    <string name="racinggame2d_sart_btn">Start</string>
    <string name="racinggame2d_setting_btn">Setting</string>
    <string name="racinggame2d_leader_board_btn">leader board</string>
    <string name="racinggame2d_about_btn">About</string>
    <string name="racinggame2d_exit_btn">Exit</string>
    <string name="racinggame2d_car_racing_game_tv">Car racing game</string>
    <string name="racinggame2d_dlg_ok_btn_label">Ok</string>
    <string name="racinggame2d_dlg_edit_player_name_hint">Input Player Name</string>
    <string name="racinggame2d_dlg_edit_car_id_hint">Input Car ID</string>
    <string name="racinggame2d_dlg_edit_car_name_hint">Input Car Name</string>
    <string name="racinggame2d_dlg_cancel_btn_label">Cancel\n\n</string>
    <string name="racinggame2d_left_btn">left</string>
    <string name="racinggame2d_right_btn">right</string>
    <string name="racinggame2d_default_name">Default name</string>
    <string name="racinggame2d_dlg_edit_player_name_tilte">Start Game</string>
    <string name="racinggame2d_dlg_edit_player_name_text">Abb</string>
    <string name="racinggame2d_sound_effect_setting_tv">Sound effect setting</string>
    <string name="racinggame2d_enable_switch">Enable sound effect</string>
    <string name="racinggame2d_enable_background_music_switch">Enable background music</string>
    <string name="racinggame2d_control_setting_tv">Control setting</string>
    <string name="racinggame2d_touch_rb">Touch</string>
    <string name="racinggame2d_gsensor_rb">Gsensor</string>
    <string name="racinggame2d_sensitivity_tv">Sensitivity</string>
    <string name="racinggame2d_player_setting_tv">Player setting</string>
    <string name="racinggame2d_player_name_et">Player name</string>
    <string name="racinggame2d_save_btn">Save</string>
    <string name="racinggame2d_volume_tv">Volume</string>
    <string name="racinggame2d_settings_tv">Settings</string>
    <string name="racinggame2d_speed_up_btn">accelerate</string>
    <string name="racinggame2d_slow_down_btn">slow down</string>
    <string name="racinggame2d_game_over_dlog_title">Game Over</string>
    <string name="racinggame2d_game_over_dlg_content">Do you want to restart the game?</string>
    <string name="racinggame2d_about_racing_game_title">About Racing Game</string>
    <string name="racinggame2d_about_instruction">Racing Game 2D is a high-speed arcade racing experience.\n\n[Gameplay Instructions]\n1. Steering: Use the Left and Right buttons to maneuver your car through traffic.\n2. Speed Control: Press Accelerate to increase speed and gain more points, or Slow Down to safely navigate tight spots.\n3. Survival: Each collision reduces your HP. Game ends when HP reaches zero.\n4. Score: The faster you go and the longer you survive, the higher your score will be!\n\nMaster the track and set new records!</string>
    <string name="racinggame2d_about_exit_btn">Exit</string>
    <string name="racinggame2d_leaderboard_title">Leaderboard</string>
    <string name="racinggame2d_leaderboard_close_btn">Close</string>
    <string name="racinggame2d_item_rank_tv">1</string>
    <string name="racinggame2d_item_name_tv">Player</string>
    <string name="racinggame2d_item_score_tv">9999</string>
    <string name="racinggame2d_item_time_tv">2025/11/05 12:00</string>
    <string name="racinggame2d_exit_dlg_title">Exit Game</string>
    <string name="racinggame2d_exit_dlg_content">Are you sure you want to exit the game?</string>
    <string name="racinggame2d_no_data_tv">No data</string>
    <string name="racinggame2d_score_tv">Score: %1$s</string>
    <string name="racinggame2d_hp_tv">HP:</string>
    <string name="racinggame2d_game_difficulty_setting_tv">Game Difficulty</string>
    <string name="racinggame2d_difficulty_item_easy">Easy</string>
    <string name="racinggame2d_difficulty_item_medium">Medium</string>
    <string name="racinggame2d_difficulty_item_hard">Hard</string>


    <string-array name="difficulty_levels">
        <item>Simple</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
</resources>