<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Adam Game
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.adam.app.racinggame2d.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_screen_background"
        android:padding="24dp"
        tools:context=".ui.main.MainActivity">

        <!-- Title -->
        <TextView
            android:id="@+id/tv_title"
            style="@style/GameTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/racinggame2d_car_racing_game_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- LOGO (Vector) -->
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_car_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <!-- BUTTONS in LinearLayout -->
        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo">

            <Button
                android:id="@+id/btn_start"
                style="@style/GameButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="@{() -> viewModel.navigateToStartGame()}"
                android:text="@string/racinggame2d_sart_btn" />

            <Button
                android:id="@+id/btn_setting"
                style="@style/GameButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="@{() -> viewModel.navigateToSetting()}"
                android:text="@string/racinggame2d_setting_btn" />

            <Button
                android:id="@+id/btn_leaderboard"
                style="@style/GameButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="@{() -> viewModel.navigateToLeaderBoard()}"
                android:text="@string/racinggame2d_leader_board_btn" />

            <Button
                android:id="@+id/btn_about"
                style="@style/GameButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.navigateToAbout()}"
                android:text="@string/racinggame2d_about_btn" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
