<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Adam Game
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_screen_background"
        android:padding="24dp"
        android:fitsSystemWindows="true"
        tools:context=".ui.about.AboutActivity">

        <TextView
            android:id="@+id/tv_about_title"
            style="@style/GameTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/racinggame2d_about_racing_game_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:cardBackgroundColor="#33FFFFFF"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_exit"
            app:layout_constraintTop_toBottomOf="@id/tv_about_title">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_about_content"
                    style="@style/GameContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/racinggame2d_about_instruction" />
            </ScrollView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_exit"
            style="@style/GameCapsuleButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:text="@string/racinggame2d_about_exit_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
