<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Adam Game
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.adam.app.racinggame2d.ui.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_screen_background"
        android:fitsSystemWindows="true"
        tools:context=".ui.game.GameActivity">

        <com.adam.app.racinggame2d.ui.game.GameSurfaceView
            android:id="@+id/game_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/ll_footer"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- HUD Background -->
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#BBFFFFFF"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_score"
            style="@style/GameLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Score: 0" />

        <ProgressBar
            android:id="@+id/progress_hp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="180dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:minHeight="24dp"
            android:maxHeight="24dp"
            android:max="3"
            android:progress="3"
            android:progressDrawable="@drawable/hp_progress_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DD1A1A2E"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_left"
                    style="@style/GameButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:backgroundTint="@null"
                    android:text="@string/racinggame2d_left_btn" />

                <Button
                    android:id="@+id/button_right"
                    style="@style/GameButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:backgroundTint="@null"
                    android:text="@string/racinggame2d_right_btn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_speed_up"
                    style="@style/GameButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:backgroundTint="@null"
                    android:text="@string/racinggame2d_speed_up_btn" />

                <Button
                    android:id="@+id/button_slow_down"
                    style="@style/GameButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:backgroundTint="@null"
                    android:text="@string/racinggame2d_slow_down_btn" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
